--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 						<div id="divThree" style="margin: 5px; width:50px; height:50px; float:left; border-radius:100%; border: 1px solid #000000; background-color:#FFD700"></div> 
 					</div>
 					
+					<label id="lblSpell" style="line-height:26px;font-size:large; font-weight:bold;">Spell Name</label>
 					<!-- start button -->
 					<div
 						<button type="button" class="btn btn-default btn-lg" onclick="loadGame(&#39;Classic&#39);">Begin</button>   
@@ -148,7 +149,7 @@
                 <h2>Enter the raffle</h2>
                 <p>We have 5 $5 Steam gift cards for you to spend on the sale. Simply attach the JSON file and include your Reddit name!</p>
 				<p>You can also upload it somewhere and send the link to me via Reddit.</p>
-                <p><a href="mailto:feedback@startbootstrap.com">mail@jsonfile.com</a>
+                <p><a href="mailto:lol@lol.com">mail@jsonfile.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
