introduced first version of key configuration

--- a/index2.html
+++ b/index2.html
@@ -27,5 +27,15 @@
 						<br/>
 						<button id ="skip" type="button" class="btn btn-default btn-lg" onclick="skip();">Skip</button>  
 						<button id ="endGame" type="button" class="btn btn-default btn-lg" onclick="endGame();">End</button>  						
+
+
+						<p> Change key assignments </p>
+						<p> The combo goes item (Eul's) + skill + skill + skill + invoke + cast </p>
+						<button id ="changeItem" type="button" class="btn btn-default btn-lg" onclick="configureFingers('Eul\'s', 49);">Item</button>
+						<button id ="changeQuas" type="button" class="btn btn-default btn-lg" onclick="configureFingers('Quas', 81);">Quas</button>
+						<button id ="changeWex" type="button" class="btn btn-default btn-lg" onclick="configureFingers('Wex', 87);">Wex</button>
+						<button id ="changeExort" type="button" class="btn btn-default btn-lg" onclick="configureFingers('Exort', 69);">Exort</button>
+						<button id ="changeInvoke" type="button" class="btn btn-default btn-lg" onclick="configureFingers('Invoke', 82);">Invoke</button>
+						<button id ="changeCast" type="button" class="btn btn-default btn-lg" onclick="configureFingers('Cast', 68);">Cast</button>
 </body>
 </html>
