--- a/Invoker.html
+++ b/Invoker.html
@@ -2,66 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head>
     <title>Invoker Trainer by /-ATHF-\ Ignignokt</title>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script> 
-    <script type="text/javascript" src="http://code.stephenmorley.org/javascript/queues/Queue.js"></script> 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="./js/jquery.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
+<script src="./js/invoke.js"></script>
+<link href="./css/style.css" rel="stylesheet">
    
-    <script type="text/javascript" src="./js/invoke.js"></script>  
-    <style>
-         body
-         {
-                font:12px/17px 'Trebuchet MS', Arial, Helvetica, sans-serif;    
-	            color:#6d6e65;
-         }
-	
-        .threecol-mask {
-	            position:relative;	
-	            clear:both;
-	            float:left;
-	            margin-top: 20px;
-	            width:100%;			
-	            min-width:950px;
-	            overflow:hidden;	
-            }
-
-            .threecol-midmask, .threecol-leftmask {
-	            float:left;
-	            width:100%;			
-	            position:relative;
-            }
-
-            .threecol-mid, .threecol-left, .threecol-right {
-	            float:left;
-	            position:relative;
-	            padding:0 0 1em 0;	
-	            overflow:hidden;	                   
-            }
-
-            .threecol-midmask {
-	            right:25%;			
-            }
-
-            .threecol-leftmask {
-	            right:50%;
-            }
-
-            .threecol-mid {
-	            width:47%;
-	            left:93%;
-                background: #FFFFFF;
-            }
-            .threecol-left {
-	            width:13%;
-	            left:32%;
-	            background-color: #FFFFFF;
-            }
-
-            .threecol-right {
-	            width:34%;			
-	            left:82%;			
-	            background-color: #FFFFFF;
-            }
-
-    </style>
 </head>
 <body>
 
@@ -73,10 +19,13 @@
                     <h1>Invoker Trainer by /-ATHF-\ Ignignokt</h1>
 
                     <div style="margin-top:30px"> 
-                        <div style="width:200px; margin-left:auto; margin-right:auto; text-align:center;">
-                            <div id="divOne" style="margin: 5px; width:50px; height:50px; float:left; border-radius:100%; border: 1px solid #000000; background-color:#00FFFF"></div>
-                            <div id="divTwo" style="margin: 5px; width:50px; height:50px; float:left;border-radius:100%; border: 1px solid #000000; background-color:#FF00FF"></div>
-                            <div id="divThree" style="margin: 5px; width:50px; height:50px; float:left; border-radius:100%; border: 1px solid #000000; background-color:#FFD700"></div> 
+                        <div style="width:400px; margin-left:auto; margin-right:auto; text-align:center;">
+                            <div id="circleOne" style="margin: 5px; width:50px; height:50px; float:left; border-radius:100%; border: 1px solid #000000; background-color:#D9FF66"></div>
+                            <div id="circleTwo" style="margin: 5px; width:50px; height:50px; float:left;border-radius:100%; border: 1px solid #000000; background-color:#6633FF"></div>
+                            <div id="circleThree" style="margin: 5px; width:50px; height:50px; float:left; border-radius:100%; border: 1px solid #000000; background-color:#FF33CC"></div> 
+                            <div id="circleFour" style="margin: 5px; width:50px; height:50px; float:left; border-radius:100%; border: 1px solid #000000; background-color:#33CCFF"></div>
+                            <div id="circleFive" style="margin: 5px; width:50px; height:50px; float:left;border-radius:100%; border: 1px solid #000000; background-color:#FF3366"></div>
+                            <div id="circleSix" style="margin: 5px; width:50px; height:50px; float:left; border-radius:100%; border: 1px solid #000000; background-color:#003DF5"></div> 
                         </div>
                     </div>
 
@@ -86,13 +35,20 @@
                     
                     <div style="margin-left:auto; margin-right:auto; text-align:center; width:400px; ">                        
                         <h2 id="settingsHeader">Settings:</h2>
-                        <button id="btnConfigure" onclick="configureControls();">Configure</button><br /><br />
+						<p> Change key assignments </p>
+						<p> The combo goes item (Eul's) + skill + skill + skill + invoke + cast </p>
+						<button id ="changeItem" type="button" class="btn btn-default btn-lg" onclick="configureFingers('Eul\'s', 49);">Item</button>
+						<button id ="changeQuas" type="button" class="btn btn-default btn-lg" onclick="configureFingers('Quas', 81);">Quas</button>
+						<button id ="changeWex" type="button" class="btn btn-default btn-lg" onclick="configureFingers('Wex', 87);">Wex</button>
+						<button id ="changeExort" type="button" class="btn btn-default btn-lg" onclick="configureFingers('Exort', 69);">Exort</button>
+						<button id ="changeInvoke" type="button" class="btn btn-default btn-lg" onclick="configureFingers('Invoke', 82);">Invoke</button>
+						<button id ="changeCast" type="button" class="btn btn-default btn-lg" onclick="configureFingers('Cast', 68);">Cast</button>
                         
                         <h2 id="playHeader">Play:</h2>
-                        <button id="btnClassic" onclick="loadGame('Classic');">Classic</button>
-                        <button id="btnTimeTrial" onclick="loadGame('TimeTrial');">Time Trial</button>                        
-                        <button id="btnEndless" onclick="loadGame('Endless');">Endless</button>                 
-                        <button id="btnChallenge" onclick="loadGame('Challenge');">Challenge</button>
+                        <button id="btnClassic" onclick="practice();">Practice</button>
+                        <button id="btnTimeTrial" onclick="baseline();">Baseline</button>                        
+                        <button id="btnEndless" onclick="training();">Training</button>                 
+                        <button id="btnChallenge" onclick="posttest();">Posttest</button>
                         <br /><br /><br /><br />
                         <button id="btnStart" style="display:none; width: 75px;" onclick="startGame();">Start</button>     
                         &nbsp&nbsp&nbsp&nbsp&nbsp &nbsp&nbsp&nbsp&nbsp&nbsp                 
