refactored js for color object managing

--- a/Invoker.html
+++ b/Invoker.html
@@ -20,12 +20,12 @@
 
                     <div style="margin-top:30px"> 
                         <div style="width:400px; margin-left:auto; margin-right:auto; text-align:center;">
-                            <div id="circleOne" style="margin: 5px; width:50px; height:50px; float:left; border-radius:100%; border: 1px solid #000000; background-color:#D9FF66"></div>
-                            <div id="circleTwo" style="margin: 5px; width:50px; height:50px; float:left;border-radius:100%; border: 1px solid #000000; background-color:#6633FF"></div>
-                            <div id="circleThree" style="margin: 5px; width:50px; height:50px; float:left; border-radius:100%; border: 1px solid #000000; background-color:#FF33CC"></div> 
-                            <div id="circleFour" style="margin: 5px; width:50px; height:50px; float:left; border-radius:100%; border: 1px solid #000000; background-color:#33CCFF"></div>
-                            <div id="circleFive" style="margin: 5px; width:50px; height:50px; float:left;border-radius:100%; border: 1px solid #000000; background-color:#FF3366"></div>
-                            <div id="circleSix" style="margin: 5px; width:50px; height:50px; float:left; border-radius:100%; border: 1px solid #000000; background-color:#003DF5"></div> 
+                            <div id="circleOne" style="margin: 5px; width:50px; height:50px; float:left; border-radius:100%; border: 1px solid #000000; background-color:#FFFFFF"></div>
+                            <div id="circleTwo" style="margin: 5px; width:50px; height:50px; float:left;border-radius:100%; border: 1px solid #000000; background-color:#FFFFFF"></div>
+                            <div id="circleThree" style="margin: 5px; width:50px; height:50px; float:left; border-radius:100%; border: 1px solid #000000; background-color:#FFFFFF"></div> 
+                            <div id="circleFour" style="margin: 5px; width:50px; height:50px; float:left; border-radius:100%; border: 1px solid #000000; background-color:#FFFFFF"></div>
+                            <div id="circleFive" style="margin: 5px; width:50px; height:50px; float:left;border-radius:100%; border: 1px solid #000000; background-color:#FFFFFF"></div>
+                            <div id="circleSix" style="margin: 5px; width:50px; height:50px; float:left; border-radius:100%; border: 1px solid #000000; background-color:#FFFFFF"></div> 
                         </div>
                     </div>
 
