fixed configure fingers

--- a/Invoker.html
+++ b/Invoker.html
@@ -20,12 +20,12 @@
 
                     <div style="margin-top:30px"> 
                         <div style="width:400px; margin-left:auto; margin-right:auto; text-align:center;">
-                            <div class="circle" id="circleOne"></div>
-                            <div class="circle" id="circleTwo"></div>
-                            <div class="circle" id="circleThree"></div>
-                            <div class="circle" id="circleFour"></div>
-                            <div class="circle" id="circleFive"></div>
-                            <div class="circle" id="circleSix"></div>
+                            <div class="circle" id="circleOne"><div class="circle-text"></div></div>
+                            <div class="circle" id="circleTwo"><div class="circle-text"></div></div>
+                            <div class="circle" id="circleThree"><div class="circle-text"></div></div>
+                            <div class="circle" id="circleFour"><div class="circle-text"></div></div>
+                            <div class="circle" id="circleFive"><div class="circle-text"></div></div>
+                            <div class="circle" id="circleSix"><div class="circle-text"></div></div>
                         </div>
                     </div>
 
