flow structure for task

--- a/Invoker.html
+++ b/Invoker.html
@@ -46,9 +46,9 @@
                         
                         <h2 id="playHeader">Play:</h2>
                         <button id="btnClassic" onclick="practice();">Practice</button>
-                        <button id="btnTimeTrial" onclick="baseline();">Baseline</button>                        
-                        <button id="btnEndless" onclick="training();">Training</button>                 
-                        <button id="btnChallenge" onclick="posttest();">Posttest</button>
+                        <button id="btnTimeTrial" onclick="baseline();" style="display:none">Baseline</button>                        
+                        <button id="btnEndless" onclick="training();" style="display:none">Training</button>                 
+                        <button id="btnChallenge" onclick="posttest();"style="display:none">Posttest</button>
                         <br /><br /><br /><br />
                         <button id="btnStart" style="display:none; width: 75px;" onclick="startGame();">Start</button>     
                         &nbsp&nbsp&nbsp&nbsp&nbsp &nbsp&nbsp&nbsp&nbsp&nbsp                 
