--- a/Invoker.html
+++ b/Invoker.html
@@ -7,7 +7,6 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
 <script src="./js/invoke.js"></script>
 <link href="./css/style.css" rel="stylesheet">
-   
 </head>
 <body>
 
@@ -33,6 +32,9 @@
                         <label id="lblSpell" style="line-height:26px;font-size:large; font-weight:bold;"></label>
                     </div>
                     
+					<div style="margin-left:auto; margin-right:auto; text-align:center">
+						<h2 id = "status" style="display:none"> Status: Incorrect </h2>
+					</div>
                     <div style="margin-left:auto; margin-right:auto; text-align:center; width:400px; ">                        
                         <h2 id="settingsHeader">Settings:</h2>
 						<p> Change key assignments </p>
@@ -138,7 +140,7 @@
                         - Special thanks to <a href="http://www.reddit.com/r/DotA2">r/DotA2</a> for the suggestions!
                         <br /><br />
 						
-						- Original code by Ignignokt
+						- Original design by Ignignokt
 						<br /> <br />
                          <button id="btnShowHide" onclick="showHideMenuClick();">Show Cheat Sheet</button>
                          <div id="cheatsheet" style="display:none">
