--- a/Invoker.html
+++ b/Invoker.html
@@ -16,8 +16,13 @@
 
                 <div class="threecol-mid" style="text-align:center">
                     <h1>Invoker Trainer Tracker</h1>
-
                     <div style="margin-top:30px"> 
+						<div style="width:400px; margin-left:auto; margin-right:auto; text-align:center;">
+							<h1 id = "nextCombo" style = "display:none"> Next Combo </h1>
+						</div>
+					</div>
+                    
+					<div style="margin-top:60px"> 
                         <div style="width:400px; margin-left:auto; margin-right:auto; text-align:center;">
                             <div class="circle" id="circleOne"><div class="circle-text"></div></div>
                             <div class="circle" id="circleTwo"><div class="circle-text"></div></div>
@@ -28,7 +33,7 @@
                         </div>
                     </div>
 
-                    <div style="margin-top:125px; margin-left:auto; margin-right:auto; text-align:center; width:100%">
+                    <div style="margin-top:155px; margin-left:auto; margin-right:auto; text-align:center; width:100%">
                         <label id="lblSpell" style="line-height:26px;font-size:large; font-weight:bold;"></label>
                     </div>
                     
