--- a/Invoker.html
+++ b/Invoker.html
@@ -18,7 +18,9 @@
                     <h1>Invoker Trainer Tracker</h1>
                     <div style="margin-top:30px"> 
 						<div style="width:400px; margin-left:auto; margin-right:auto; text-align:center;">
+							<h1 id = "nextComboName" style = "display:none"> Combo Name </h1>
 							<h1 id = "nextCombo" style = "display:none"> Next Combo </h1>
+							<div class = "square" id = "skillPic" style="display:none"></div>
 						</div>
 					</div>
                     
