--- a/Invoker.html
+++ b/Invoker.html
@@ -71,8 +71,14 @@
                                     </select>
                                 </div>
                                 <div>
-                                    <label>MMR (0 if unranked):</label>
-                                    <input type="text" id="mmr" />
+                                    <label>Solo MMR:</label>
+                                    <select id="mmr">
+										<option value="unrankd">Unranked</option>
+                                        <option value="0-1000">0 - 1000</option>
+                                        <option value="1000-2000">1000 - 2000</option>
+                                        <option value="2000-3000">2000 - 3000</option>
+                                        <option value="3000-4000">3000 - 4000</option>
+                                        <option value="4000+">4000+</option>										</select>
                                 </div>
                                 <div>
                                     <label>Experience with Invoker:</label>
