--- a/index.html
+++ b/index.html
@@ -19,37 +19,119 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h1>
+<a id="invokerpractice" class="anchor" href="#invokerpractice" aria-hidden="true"><span class="octicon octicon-link"></span></a>InvokerPractice</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Invoker skill practice script</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<p><strong>V0.1.1</strong></p>
+
+<p>Made it easier to test the game in console mode</p>
+
+<p><strong>V0.1</strong></p>
+
+<p>Brand new rewritten Invoke script</p>
+
+<p>Does not function graphically</p>
+
+<p><strong>V0.03</strong></p>
+
+<p><em>Added:</em></p>
+
+<p>Initiates page/variables</p>
+
+<p>Array Identical Check</p>
+
+<p>Get Spell</p>
+
+<p>Is Spell Correct</p>
+
+<p>Invoke Spell</p>
+
+<p>Get Invoked Spell</p>
+
+<p>Display Next Spell/Finish</p>
+
+<p>Randomizer</p>
+
+<p>Begin and Loads Classic Game (2 functions)</p>
+
+<p>Starts Game</p>
+
+<p><em>To do:</em></p>
+
+<p>JQuery stuff </p>
+
+<p>Broken: <del>keyboard input</del></p>
+
+<p>Broken: <del>Adds spells to a queue</del> (I shouldn't use integers)</p>
+
+<p>Broken: <del>Cast Spell</del></p>
+
+<p>Broken: <del>Cast Spell</del></p>
+
+<p>Queue</p>
+
+<p><strong>V0.02</strong></p>
+
+<p>Can start game</p>
+
+<p>Circles now on page</p>
+
+<p>Stats counter on page</p>
+
+<p><strong>v0.01</strong></p>
+
+<p>Initial upload of all of the files including templates</p>
+
+<p>Mostly design elements</p>
+
+<p><em>To-do:</em></p>
+
+<p>Description of DoTA2 and Invoker</p>
+
+<p>Queue of key presses</p>
+
+<p>Item generation and insertion </p>
+
+<p>Spell generation</p>
+
+<p>Spell compare and reject</p>
+
+<p>Image elements</p>
+
+<hr>
+
+<p><strong>JSON Format</strong></p>
+
+<pre><code>document.getElementById("download").innerHTML = '&lt;a href="data:' + encodeURI("text/json;charset=utf-8," + JSON.stringify(responseData)) + '" download="data.json"&gt;download data&lt;/a&gt;a&gt;';
+
+
+{
+  #### Initial configuration and data
+  'TIMESTAMP': {
+    'uuid': UUID,
+    'state': ,
+    'data': {
+      'finger mappings': ,
+      'player level': ,
+      'task mode': ,
+    }
+  },
+  ##### On key press events
+  'TIMESTAMP': {
+    'uuid': UUID,
+    'state': ,
+    'data': {
+      'key event': ,
+      'target queue': ,
+      'current queue': ,
+      'success state': ,
+    }
+  },
+  ...
+}
 </code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/KaitoKid/InvokerPractice">Invokerpractice</a> is maintained by <a href="https://github.com/KaitoKid">KaitoKid</a>.</span>
