changed mmr to fill in and exp to binary

--- a/Invoker.html
+++ b/Invoker.html
@@ -72,20 +72,13 @@
                                 </div>
                                 <div>
                                     <label>Solo MMR:</label>
-                                    <select id="mmr">
-										<option value="unrankd">Unranked</option>
-                                        <option value="0-1000">0 - 1000</option>
-                                        <option value="1000-2000">1000 - 2000</option>
-                                        <option value="2000-3000">2000 - 3000</option>
-                                        <option value="3000-4000">3000 - 4000</option>
-                                        <option value="4000+">4000+</option>										</select>
+                                    <input type="text" id="mmr"/>
                                 </div>
                                 <div>
                                     <label>Experience with Invoker:</label>
                                     <select id="exp">
-                                        <option value="1">Main</option>
-                                        <option value="2">Occasionally play</option>
-                                        <option value="3">Never played</option>
+                                        <option value="1">Experienced</option>
+                                        <option value="2">Never played</option>
                                     </select>
                                 </div>
                             
