--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                     </select>
                                 </div>
                                 <div>
-                                    <label>Solo MMR:</label>
+                                    <label>Current Solo MMR:</label>
                                     <input type="text" id="mmr"/>
                                 </div>
                                 <div>
